# asiotestproject

./: README.md  asyncnetprog.pptx
asionvs/: CMakeLists.txt  README.md
asionvs/client/: CMakeLists.txt
asionvs/client/include/: client.h
asionvs/client/src/: client.cpp  main.cpp
asionvs/server/: CMakeLists.txt
asionvs/server/include/: connection.h  server.h
asionvs/server/src/: connection.cpp  main.cpp  server.cpp
